# matplotlib-dark

./: README.md  generate_images.py  pyproject.toml
src/matplotlib_dark/: __init__.py  core.py  themes.py
tests/: __init__.py  test_core.py
